added initial files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-5 mb-3">Products</h1>
+        <h1 class="mt-5 mb-3">PRODUCTS</h1>
         <div id="product-list" class="row">
             <!-- Product items will be appended here -->
         </div>
